# tnt-generator

./: .gitignore  Dockerfile  README.md  go.mod  main.go  schema.avsc
generator/: clang.go  decoder.go  encoder.go  modelsc.go  modelsh.go  structs.go
parser/: avro.go  ctypes.go  parser.go
template/: CMakeLists.txt  funcs.c  funcs.h  generate_msgpack.lua  main.c  models.c  models.h  wrappers.c  wrappers.h
types/: array.go  ctypes.go  primitive.go  string.go  struct.go
